// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`linked-appeals GET /linked-appeals/add should render the add linked appeal reference page with the expected content, and a back link to the case details page 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="POST" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                                        <input class="govuk-input govuk-input govuk-input--width-10" id="appeal-reference"
                                        name="appeal-reference" type="text">
                                    </div>
                                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                                    data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the change lead appeal page 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1/linked-appeals/add" class="govuk-back-link">Back</a>
            <main             class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="POST" novalidate="novalidate">
                                    <div class="govuk-form-group">
                                        <fieldset class="govuk-fieldset">
                                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                                <h1 class="govuk-fieldset__heading"> Which is the lead appeal?</h1>
                                            </legend>
                                            <div class="govuk-radios" data-module="govuk-radios">
                                                <div class="govuk-radios__item">
                                                    <input class="govuk-radios__input" id="lead-appeal" name="lead-appeal"
                                                    type="radio" value="APP/Q9999/D/21/351062">
                                                    <label class="govuk-label govuk-radios__label" for="lead-appeal"><span>APP/Q9999/D/21/351062</span>
                                                        <br><span class="govuk-hint">21 The Pavement</span>
                                                        <br><span class="govuk-hint">Householder</span>
                                                    </label>
                                                </div>
                                                <div class="govuk-radios__item">
                                                    <input class="govuk-radios__input" id="lead-appeal-2" name="lead-appeal"
                                                    type="radio" value="TEST-12345">
                                                    <label class="govuk-label govuk-radios__label" for="lead-appeal-2"><span>TEST-12345</span>
                                                        <br><span class="govuk-hint">96 The Avenue</span>
                                                        <br><span class="govuk-hint">Householder</span>
                                                    </label>
                                                </div>
                                            </div>
                                        </fieldset>
                                    </div>
                                    <button type="submit" data-prevent-double-click="true" class="govuk-button"
                                    data-module="govuk-button">Continue</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
                </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page when a lead appeal has been chosen and both appeals are currently unlinked 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1/linked-appeals/add/lead-appeal"
            class="govuk-back-link">Back</a>
            <main class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 1234765</span>
                        <h1 class="govuk-heading-l">Check details and add linked appeal</h1>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                                <dd class="govuk-summary-list__value"><span>TEST-12345</span>
                                    <br><span class="govuk-hint">96 The Avenue</span>
                                    <br><span class="govuk-hint">Householder</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/add?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Flinked-appeals%2Fadd%2Fcheck-and-confirm">Change</a>
                                </dd>
                            </div>
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Which is the lead appeal?</dt>
                                <dd                                 class="govuk-summary-list__value"><span>1234765</span>
                                    <br><span class="govuk-hint">21 The Pavement</span>
                                    <br><span class="govuk-hint">Householder</span>
                                    </dd>
                                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/add/lead-appeal?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Flinked-appeals%2Fadd%2Fcheck-and-confirm">Change</a>
                                    </dd>
                            </div>
                        </dl>
                        <p class="govuk-body">1234765 will be the lead appeal of TEST-12345</p>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="post" novalidate="novalidate">
                                    <button type="submit" class="govuk-button" data-module="govuk-button">Add linked appeal</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
            </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/check-and-confirm should render the check and confirm page when a lead appeal has been chosen as it is already linked 1`] = `
"<body class="govuk-template__body">
    <script nonce="EdcOUaJ8lczj9tIPO0lPow==">
        document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');
    </script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a>
    <header     class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header"
    role="banner" data-module="govuk-header">
        <div class="govuk-width-container">
            <div class="pins-row">
                <div class="pins-column--left">
                    <div class="pins-header__logo"><i class="pins-header__logo-crown"></i>
                    </div><span>Planning Inspectorate</span>
                </div>
                <div class="pins-column--central">
                    <h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1>
                    <nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu">
                        <ul class="govuk-header__navigation-list">
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a>
                            </li>
                            <li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a>
                            </li>
                        </ul>
                    </nav>
                </div>
            </div>
        </div>
        </header>
        <div class="govuk-width-container govuk-width-container">
            <div class="govuk-phase-banner">
                <p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong>
                    <span                     class="govuk-phase-banner__text">This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u"
                        class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span>
                </p>
            </div><a href="/appeals-service/appeal-details/1/linked-appeals/add/lead-appeal"
            class="govuk-back-link">Back</a>
            <main class="govuk-main-wrapper" id="main-content">
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 (lead)</span>
                        <h1 class="govuk-heading-l">Check details and add linked appeal</h1>
                    </div>
                </div>
                <div class="govuk-grid-row">
                    <div class="govuk-grid-column-two-thirds">
                        <dl class="govuk-summary-list govuk-!-margin-bottom-5">
                            <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt>
                                <dd class="govuk-summary-list__value"><span>TEST-12345</span>
                                    <br><span class="govuk-hint">96 The Avenue</span>
                                    <br><span class="govuk-hint">Householder</span>
                                </dd>
                                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/add?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Flinked-appeals%2Fadd%2Fcheck-and-confirm">Change</a>
                                </dd>
                            </div>
                        </dl>
                        <p class="govuk-body">APP/Q9999/D/21/351062 will be the lead appeal of TEST-12345</p>
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-full">
                                <form method="post" novalidate="novalidate">
                                    <button type="submit" class="govuk-button" data-module="govuk-button">Add linked appeal</button>
                                </form>
                            </div>
                        </div>
                    </div>
                </div>
            </main>
        </div>
        <footer class="govuk-footer" role="contentinfo">
            <div class="govuk-width-container ">
                <div class="govuk-footer__meta">
                    <div class="govuk-footer__meta-item govuk-footer__meta-item"></div>
                </div>
            </div>
        </footer>
</body>"
`;

exports[`linked-appeals GET /linked-appeals/add/lead-appeal should render the change lead appeal page 1`] = `"<body class="govuk-template__body"><script nonce="EdcOUaJ8lczj9tIPO0lPow==">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a><header class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header" role="banner" data-module="govuk-header"><div class="govuk-width-container"><div class="pins-row"><div class="pins-column--left"><div class="pins-header__logo"><i class="pins-header__logo-crown"></i></div><span>Planning Inspectorate</span></div><div class="pins-column--central"><h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1><nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu"><ul class="govuk-header__navigation-list"><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a></li><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a></li><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a></li></ul></nav></div></div></div></header><div class="govuk-width-container govuk-width-container"><div class="govuk-phase-banner"><p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong><span class="govuk-phase-banner__text"> This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u" class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span></p></div><a href="/appeals-service/appeal-details/1/linked-appeals/add" class="govuk-back-link">Back</a><main class="govuk-main-wrapper" id="main-content"><div class="govuk-grid-row"><div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span></div></div><div class="govuk-grid-row"><div class="govuk-grid-column-two-thirds"><div class="govuk-grid-row"><div class="govuk-grid-column-full"><form method="POST" novalidate="novalidate"><div class="govuk-form-group"><fieldset class="govuk-fieldset"><legend class="govuk-fieldset__legend govuk-fieldset__legend--l"><h1 class="govuk-fieldset__heading"> Which is the lead appeal?</h1></legend><div class="govuk-radios" data-module="govuk-radios"><div class="govuk-radios__item"><input class="govuk-radios__input" id="lead-appeal" name="lead-appeal" type="radio" value="APP/Q9999/D/21/351062"><label class="govuk-label govuk-radios__label" for="lead-appeal"><span>APP/Q9999/D/21/351062</span><br><span class="govuk-hint">21 The Pavement</span><br><span class="govuk-hint">Householder</span></label></div><div class="govuk-radios__item"><input class="govuk-radios__input" id="lead-appeal-2" name="lead-appeal" type="radio" value="TEST-12345"><label class="govuk-label govuk-radios__label" for="lead-appeal-2"><span>TEST-12345</span><br><span class="govuk-hint">96 The Avenue</span><br><span class="govuk-hint">Householder</span></label></div></div></fieldset></div><button type="submit" data-prevent-double-click="true" class="govuk-button" data-module="govuk-button"> Continue</button></form></div></div></div></div></main></div><footer class="govuk-footer" role="contentinfo"><div class="govuk-width-container "><div class="govuk-footer__meta"><div class="govuk-footer__meta-item govuk-footer__meta-item"></div></div></div></footer></body>"`;

exports[`linked-appeals GET /linked-appeals/manage should render the manage linked appeals page with the expected content 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 (lead)</span>
            <h1 class="govuk-heading-l">Linked appeals</h1>
        </div>
    </div>
    <table class="govuk-table">
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <td class="govuk-table__cell" colspan="2">
                    <div class="govuk-!-padding-bottom-10"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/change-lead-appeal"
                        aria-label="change-lead-appeal" data-cy="APP/Q9999/D/21/351062">Change lead appeal</a>
                    </div>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/1" aria-label="Appeal 3 5 1 0 6 2"
                    data-cy="APP/Q9999/D/21/351062">351062</a> (lead)
                    <br>Householder</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="select-lead-appeal">Unlink<span class="govuk-visually-hidden"> appeal 3 5 1 0 6 2</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/2" aria-label="Appeal 7 2 5 2 8 4"
                    data-cy="APP/Q9999/D/21/725284">725284</a>
                    <br>Householder</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="unlink-appeal/2">Unlink<span class="govuk-visually-hidden"> appeal 7 2 5 2 8 4</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <td class="govuk-table__cell"><a class="govuk-link" href="/appeals-service/appeal-details/3" aria-label="Appeal 7 6 2 1 5 4 1 6"
                    data-cy="76215416">76215416</a>
                    <br>Unknown</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a class="govuk-link" data-cy="unlink-appeal-APP/Q9999/D/21/351062" href="unlink-appeal/3">Unlink<span class="govuk-visually-hidden"> appeal 7 6 2 1 5 4 1 6</span></a>
                </td>
            </tr>
        </tbody>
    </table>
</main>"
`;

exports[`linked-appeals GET /linked-appeals/unlink-appeal should render the unlink-appeal page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 (lead)</span>
            <h1 class="govuk-heading-l">Confirm that you want to unlink linked appeal 725284</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Confirm</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if no reference was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter an appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter an appeal reference</p>
                            <input                             class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is a horizon appeal (starting with 2) 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid appeal
                                reference</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="2345678"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is a horizon appeal (starting with 3) 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid appeal
                                reference</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="3456789"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is a horizon appeal (starting with 4) 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid appeal
                                reference</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="4567890"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is greater than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Appeal reference must
                                be 7 digits</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="12345678"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the provided appeal reference is less than 7 digits 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Appeal reference must be 7 digits</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Appeal reference must
                                be 7 digits</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="123456"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the reference is the same as appeal being linked to 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 6000123 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid appeal
                                reference</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="6000123"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add should re-render the add linked appeal reference page with the expected error message if the reference was provided but no matching appeal was found 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-reference">Enter a valid appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - add linked appeal</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="appeal-reference"> Appeal reference</label></h1>
                            <p id="appeal-reference-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter a valid appeal
                                reference</p>
                            <input class="govuk-input govuk-input govuk-input--width-10 govuk-input--error"
                            id="appeal-reference" name="appeal-reference" type="text" value="7654321"
                            aria-describedby="appeal-reference-error">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`linked-appeals POST /linked-appeals/add/lead-appeal should update the lead appeal on the confirm page after submit 1`] = `"<body class="govuk-template__body"><script nonce="EdcOUaJ8lczj9tIPO0lPow==">document.body.className += ' js-enabled' + ('noModule' in HTMLScriptElement.prototype ? ' govuk-frontend-supported' : '');</script><a href="#main-content" class="govuk-skip-link" data-module="govuk-skip-link">Skip to main content</a><header class="govuk-header govuk-!-margin-bottom-0" id="pins-applications-header" role="banner" data-module="govuk-header"><div class="govuk-width-container"><div class="pins-row"><div class="pins-column--left"><div class="pins-header__logo"><i class="pins-header__logo-crown"></i></div><span>Planning Inspectorate</span></div><div class="pins-column--central"><h1 class="pins-header-domainname govuk-body-l govuk-!-font-weight-bold govuk-!-margin-bottom-0"> Manage appeals</h1><nav class="govuk-header__navigation pins-header-navigation" aria-label="Menu"><ul class="govuk-header__navigation-list"><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/personal-list">Assigned to me</a></li><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/appeals-service/all-cases">All cases</a></li><li class="govuk-header__navigation-item"><a class="govuk-header__link" href="/auth/signout">Sign out</a></li></ul></nav></div></div></div></header><div class="govuk-width-container govuk-width-container"><div class="govuk-phase-banner"><p class="govuk-phase-banner__content"><strong class="govuk-tag govuk-phase-banner__content__tag"> Beta</strong><span class="govuk-phase-banner__text"> This is a new service. Help us improve it and <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=mN94WIhvq0iTIpmM5VcIjYt1ax_BPvtOqhVjfvzyJN5UQzNVQjdaV0U0TDdTOE1LNktBT0w5NEQ1Vy4u" class="govuk-link" target="_blank" rel="noopener noreferrer">give your feedback (opens in a new tab)</a>.</span></p></div><a href="/appeals-service/appeal-details/1/linked-appeals/add/lead-appeal" class="govuk-back-link">Back</a><main class="govuk-main-wrapper" id="main-content"><div class="govuk-grid-row"><div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span><h1 class="govuk-heading-l">Check details and add linked appeal</h1></div></div><div class="govuk-grid-row"><div class="govuk-grid-column-two-thirds"><dl class="govuk-summary-list govuk-!-margin-bottom-5"><div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal reference</dt><dd class="govuk-summary-list__value"><span>1234567</span><br><span class="govuk-hint">96 The Avenue</span><br><span class="govuk-hint">Householder</span></dd><dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/add?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Flinked-appeals%2Fadd%2Fcheck-and-confirm">Change</a></dd></div><div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Which is the lead appeal?</dt><dd class="govuk-summary-list__value"><span>1234567</span><br><span class="govuk-hint">96 The Avenue</span><br><span class="govuk-hint">Householder</span></dd><dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/linked-appeals/add/lead-appeal?backUrl=%2Fappeals-service%2Fappeal-details%2F1%2Flinked-appeals%2Fadd%2Fcheck-and-confirm">Change</a></dd></div></dl><p class="govuk-body">1234567 will be the lead appeal of APP/Q9999/D/21/351062</p><div class="govuk-grid-row"><div class="govuk-grid-column-full"><form method="post" novalidate="novalidate"><button type="submit" class="govuk-button" data-module="govuk-button"> Add linked appeal</button></form></div></div></div></div></main></div><footer class="govuk-footer" role="contentinfo"><div class="govuk-width-container "><div class="govuk-footer__meta"><div class="govuk-footer__meta-item govuk-footer__meta-item"></div></div></div></footer></body>"`;
